--- a/files/CV/Basinski_CV.tex
+++ b/files/CV/Basinski_CV.tex
@@ -35,9 +35,7 @@
 
 \begin{tabularx}{\textwidth}{p{\incellone} p{\incelltwo} p{\incellthree}}
 
-  C\textsc{ontact} & \parbox[t]{5 cm}{Andrew Basinski \\ 2349 Prairie Street \\ Stevens Point, WI 54481} & \parbox[t]{8cm}{Phone: 715-252-7270\\
-    Email: abasinski@uidaho.edu \\
-    Website: \url{https://54481andrew.github.io/}
+  C\textsc{ontact} & \parbox[t]{5 cm}{Andrew Basinski \\ Stevens Point, WI 54481} & \parbox[t]{8cm}{Email: abasinski [at] uidaho [dot] edu\\ Website: \url{https://54481andrew.github.io/}
   } \\
 
 \end{tabularx}
