--- a/index.Rmd
+++ b/index.Rmd
@@ -46,7 +46,7 @@ where $D_L(x)$ is the probability of Lassa occurring at spatial position x, $D_R
 
 Climatic and land cover GIS datasets are valuable for predicting the burden of disease risk in broad geographical areas. However, GIS datasets are often too coarse to allow fine-scale assessment of disease risk at, for example, the level of an individual village. This is unfortunate because fine-scale features such as housing style likely affect zoonotic disease transmission to humans. For example, disease-carrying rodents are better able to gain entry into a thatch hut versus a modern concrete building.
 
-As part of ongoing work, we are designing a convolutional neural network (CNN) that will "see" local village features directly from satellite imagery. The CNN is constructed using the Keras and tensorflow libraries in python, and performs image segmentation to classify image pixels into discrete categories (i.e., building, rice cultivation, etc.). The CNN will allow local village features to be detected from satellite imagery across West Africa and summarized into statistics (housing density, land area of cultivation) that are meaningful predictors of local zoonotic disease transmission. The image above is a demonstration of our model's ability to detect different types of buildings in an image.   
+As part of ongoing work, we are designing a convolutional neural network (CNN) that will "see" local village features directly from satellite imagery. The CNN is constructed using the Keras and tensorflow libraries in python, and performs image segmentation to classify image pixels into discrete categories (i.e., building, rice cultivation, etc.). The CNN will allow local village features to be detected from satellite imagery across West Africa and summarized into statistics (housing density, land area of cultivation) that are meaningful predictors of local zoonotic disease transmission. The image above is a demonstration of our model's ability to detect different types of buildings and land features in an image.   
 
 
 <br> <br>
