--- a/index.Rmd
+++ b/index.Rmd
@@ -46,7 +46,7 @@ where $D_L(x)$ is the probability of Lassa occurring at spatial position x, $D_R
 
 Climatic and land cover GIS datasets are valuable for predicting the burden of disease risk in broad geographical areas. However, GIS datasets are often too coarse to allow fine-scale assessment of disease risk at, for example, the level of an individual village. This is unfortunate because fine-scale features such as housing style likely affect zoonotic disease transmission to humans. For example, disease-carrying rodents are better able to gain entry into a thatch hut versus a modern concrete building.
 
-As part of ongoing work, we are designing a convolutional neural network (CNN) that will "see" local village features directly from satellite imagery. The CNN is constructed using the Keras and tensorflow libraries in python, and performs image segmentation to classify image pixels into discrete categories (i.e., building, rice cultivation, etc.). The CNN will allow local village features to be detected from satellite imagery across West Africa and summarized into statistics (housing density, land area of cultivation) that are meaningful predictors of local zoonotic disease transmission. The image above is a demonstration of our model's ability to detect different types of buildings and land features in an image.   
+As part of ongoing work, we are designing a convolutional neural network (CNN) that will "see" local village features directly from satellite imagery. The CNN is constructed using the Keras and tensorflow libraries in python, and performs image segmentation to classify image pixels into discrete categories (i.e., building, rice cultivation, etc.). The CNN will allow local village features to be detected from satellite imagery across West Africa and summarized into statistics (housing density, land area of cultivation) that are meaningful predictors of local zoonotic disease transmission. The image above is a demonstration of our model's ability to detect different types of buildings and land features in an image.  Want to know more? Check out my new [machine vision Github repository](https://github.com/54481andrew/sky-glass) that walks through the process of training a CNN to detect features in satellite imager.  
 
 
 <br> <br>
@@ -71,6 +71,12 @@ The project involved collecting an extensive image/species dataset of local tree
 
 <br> <br>
 
+## Hobby-project: Shiny App that forecasts stock prices
 
+Using R packages like Shiny, forecast, and ggplot, I've put together a small app that downloads, plots, and forecasts stock prices. The code is contained in [this github repository](https://github.com/54481andrew/stock-forecast). Admittedly, the application is very simple. A user can enter a stock symbol (e.g., VOO, TSLA, etc) and click "Update Plot" to download and plot the corresponding monthly-averaged stock prices. If the "Overlay Forecast" option is checked, updating the plot will add in a forecast fit using the Exponential Triple Smoothing algorithm (ETS). The forecasted values that are plotted range from one month forward of the current month, to the end date selected by the user in the date range input. 80% and 95% prediction intervals are added to the forecasted values, plotted in pink and red, respectively.    
 
+<iframe src ="https://54481andrew.shinyapps.io/stock-forecast-master/?_ga=2.210613591.375051434.1628385409-2013378022.1628214290"
+  style="border: none; width: 100%; height: 500px;"/>
+</iframe>
 
+<br> <br>
