--- a/index.Rmd
+++ b/index.Rmd
@@ -30,7 +30,7 @@ Because of the lack of health infrastructure in West Africa, many cases of Lassa
 The forecasting model consists of multiple submodels (layers) that each forecast a different aspect of the risk of Lassa Fever. The first layer uses boosted regression trees that, when given land cover and climate attributes of known locations of Lassa occurrence, predict the probability of Lassa being present in the rodent population within each 5 km by 5 km pixel across West Africa. Similarly, the second layer uses boosted regression trees to forecast the probability that the rodent reservoir of Lassa, the multimammate rat \emph{Mastomys natalensis}, occurs in a pixel. Finally, a third layer uses rodent trapping data to predict seasonal migrations of rats into and out of domestic settings.  The form of the forecast is
 
 \[ \text{Lassa transmission risk} \sim D_L(x) D_R(x) T(t,x),\]
-where $D_L(x)$ is the probability of Lassa occurring at spatial position x, $D_R(x)$ gives the probability that the primary rodent reservoir occurs, and $T(t,x)$ describes the seasonal migration of the reservoir. Here, dependence on the spatial coordinate $x$ occurs through climate and land cover predictors from satellite datasets. This work is ongoing; a version of this framework has been submitted to PLOS Computational Biology, and is available as a [BioRxiv preprint](https://www.biorxiv.org/content/10.1101/2020.03.05.979658v1). Code that is discussed in the manuscript is available in [this github repository](https://github.com/54481andrew/pathogen-spillover-forecast).
+where $D_L(x)$ is the probability of Lassa occurring at spatial position x, $D_R(x)$ gives the probability that the primary rodent reservoir occurs, and $T(t,x)$ describes the seasonal migration of the reservoir. Here, dependence on the spatial coordinate $x$ occurs through climate and land cover predictors from satellite datasets. This work is ongoing; a version of this framework has been submitted to PLOS Computational Biology, and is available as a [BioRxiv preprint](https://www.biorxiv.org/content/10.1101/2020.03.05.979658v1). Code that is discussed in the manuscript is available in [this Github repository](https://github.com/54481andrew/pathogen-spillover-forecast).
 
 <br> <br>
 
@@ -55,7 +55,7 @@ As part of ongoing work, we are designing a convolutional neural network (CNN) t
 
 <br>
 
-Wildlife vaccination has proven itself an effective means of controlling diseases that can otherwise spread to humans and domestic pets (e.g. rabies in fox, coyotes, and raccoons). Given the success of vaccination campaigns in fox and raccoon populations, it is likely that vaccination will be used on other wildlife as well (e.g., Ebola in gorillas and/or bats, Lassa in rodents). From past campaigns on raccoons and fox, we know that vaccinating in the fall generally results in greater vaccine uptake, simply because the most recent juvenile population is developed and foraging at that time. However, the importance of timing in vaccination campaigns has never been investigated for other wildlife reservoirs of pathogens. My work with an undergraduate at the University of Idaho used a mathematical model to explore how timing of vaccination can influence the outcome of a disease management program in wildlife. Our work was published in the Journal of Applied Ecology (Schreiner, Basinski, 2020), and the associated code is available in [this github repository](https://github.com/54481andrew/Vaccinate-a-fluctuating-population).
+Wildlife vaccination has proven itself an effective means of controlling diseases that can otherwise spread to humans and domestic pets (e.g. rabies in fox, coyotes, and raccoons). Given the success of vaccination campaigns in fox and raccoon populations, it is likely that vaccination will be used on other wildlife as well (e.g., Ebola in gorillas and/or bats, Lassa in rodents). From past campaigns on raccoons and fox, we know that vaccinating in the fall generally results in greater vaccine uptake, simply because the most recent juvenile population is developed and foraging at that time. However, the importance of timing in vaccination campaigns has never been investigated for other wildlife reservoirs of pathogens. My work with an undergraduate at the University of Idaho used a mathematical model to explore how timing of vaccination can influence the outcome of a disease management program in wildlife. Our work was published in the Journal of Applied Ecology (Schreiner, Basinski, 2020), and the associated code is available in [this Github repository](https://github.com/54481andrew/Vaccinate-a-fluctuating-population).
 
 <br><br>
 
@@ -67,13 +67,13 @@ Wildlife vaccination has proven itself an effective means of controlling disease
 
 When I'm not researching, one of my favorite pastimes living in Wisconsin is plant identification -- the plant diversity in Wisconsin is amazing, so you never know what you'll find in some secluded meadow or woodland. This project is a fusion of my love of plant ID and my desire to learn more about machine vision with tensorflow.  The goal was to build a convolutional neural network (CNN) that could identify a tree's species from an image of its bark. This particular challenge was partly motivated by the oncoming fall weather -- tree ID is about to get a lot more difficult as the leaves fall -- and I would like to get better with winter tree ID.  
 
-The project involved collecting an extensive image/species dataset of local trees (30+ hours in the woods) in some beautiful Wisconsin fall weather. The resulting [github repository](https://github.com/54481andrew/tree-bark-cnn) provides the full dataset that I collected, as well as a complete walk through of building, training, and evaluating the CNN. This project demonstrates certain key issues in machine learning, including data augmentation, how to handle imbalanced datasets in classification problems, and model selection. 
+The project involved collecting an extensive image/species dataset of local trees (30+ hours in the woods) in some beautiful Wisconsin fall weather. The resulting [Github repository](https://github.com/54481andrew/tree-bark-cnn) provides the full dataset that I collected, as well as a complete walk through of building, training, and evaluating the CNN. This project demonstrates certain key issues in machine learning, including data augmentation, how to handle imbalanced datasets in classification problems, and model selection. 
 
 <br> <br>
 
 ## Hobby-project: Shiny App that forecasts stock prices
 
-Using R packages like Shiny, forecast, and ggplot, I've put together a small app that downloads, plots, and forecasts stock prices. The code is contained in [this github repository](https://github.com/54481andrew/stock-forecast). Admittedly, the application is very simple. A user can enter a stock symbol (e.g., VOO, TSLA, etc) and click "Update Plot" to download and plot the corresponding monthly-averaged stock prices. If the "Overlay Forecast" option is checked, updating the plot will add in a forecast fit using the Exponential Triple Smoothing algorithm (ETS). The forecasted values that are plotted range from one month forward of the current month, to the end date selected by the user in the date range input. 80% and 95% prediction intervals are added to the forecasted values, plotted in pink and red, respectively.    
+Using R packages like Shiny, forecast, and ggplot, I've put together a small app that downloads, plots, and forecasts stock prices. The code is contained in [this Github repository](https://github.com/54481andrew/stock-forecast). Admittedly, the application is very simple. A user can enter a stock symbol (e.g., VOO, TSLA, etc) and click "Update Plot" to download and plot the corresponding monthly-averaged stock prices. If the "Overlay Forecast" option is checked, updating the plot will add in a forecast fit using the Exponential Triple Smoothing algorithm (ETS). The forecasted values that are plotted range from one month forward of the current month, to the end date selected by the user in the date range input. 80% and 95% prediction intervals are added to the forecasted values, plotted in pink and red, respectively.    
 
 <iframe src ="https://54481andrew.shinyapps.io/stock-forecast-master/?_ga=2.210613591.375051434.1628385409-2013378022.1628214290"
   style="border: none; width: 100%; height: 500px;"/>
