--- a/files/CV/Basinski_CV.tex
+++ b/files/CV/Basinski_CV.tex
@@ -27,7 +27,7 @@
 \begin{document}
 
 
-{\huge Andrew J. Basinski \hspace{2.5in} August, 2021}
+{\huge Andrew J. Basinski \hspace{2.5in} January, 2022}
 
 \noindent\makebox[\linewidth]{\rule{\linewidth}{0.4pt}}
 
@@ -35,8 +35,8 @@
 
 \begin{tabularx}{\textwidth}{p{\incellone} p{\incelltwo} p{\incellthree}}
 
-  C\textsc{ontact} & \parbox[t]{5 cm}{Andrew Basinski \\ 1419 County Road C \\ Stevens Point, WI 54481} & \parbox[t]{8cm}{Phone: 715-252-7270\\
-    Email: abasinski@uidaho.edu \\
+  C\textsc{ontact} & \parbox[t]{5 cm}{Andrew Basinski \\ Stevens Point, WI 54481} & \parbox[t]{8cm}{%%Phone: \\%%715-252-XXXX\\
+%%    Email: \\%%abasinski@uidaho.edu \\
     Website: \url{https://54481andrew.github.io/}
   } \\
 
@@ -49,22 +49,25 @@ E\textsc{ducation} & \parbox[t]{\celltwo}{{\bf Ph.D., Mathematics} University of
 
 		          & \parbox[t][0cm]{13cm}{{\bf B.S., Biology} University of Wisconsin-Stevens Point} & Spring, 2009 \\
 		          & \parbox[t]{13cm}{{\bf B.S., Mathematics} University of Wisconsin-Stevens Point} & Spring, 2009 \\
+\end{tabularx} 
+
+\spa
+
+\begin{tabularx}{\textwidth}{p{\cellone} p{\celltwo} p{\cellthree}}
+  \parbox[t][0cm]{\cellone}{A\textsc{ppointments}}  & \parbox[t]{10cm}{Computational Data Scientist. Institute for \\Interdisciplinary Data Sciences, University of Idaho, Moscow, ID 83844} & \parbox[t][]{\cellthree}{December, 2021 - \\ Present}
 \end{tabularx}
 
 \spa
 
 \begin{tabularx}{\textwidth}{p{\cellone} p{\celltwo} p{\cellthree}}
-    \parbox[t][0cm]{\cellone}{A\textsc{ppointments}}  & \parbox[t]{10cm}{Post-Doctoral Associate with Chris Remien and Scott \\ Nuismer. Department of Mathematics, University of Idaho, Moscow, ID 83844} & \parbox[t][]{\cellthree}{October, 2016 - \\ Present}
+  \parbox[t][0cm]{\cellone}{}  & \parbox[t]{10cm}{Post-Doctoral Associate with Chris Remien and Scott \\ Nuismer. Department of Mathematics, University of Idaho, Moscow, ID 83844} & \parbox[t][]{\cellthree}{October, 2016 - \\ November, 2021}
 \end{tabularx}
-
-
-
 
 \spa
 
 \begin{tabularx}{\textwidth}{p{\cellone} p{\celltwo}}
   \parbox[t][0cm]{\cellone}{R\textsc{esearch} E\textsc{xperience}} & \parbox[t][0cm]{12cm}{
-    Disease forecasting models, epidemiological models, machine learning, machine vision with convolutional neural networks, spatial ecology, ODE and PDE numerical simulation and analysis, stochastic models, agent-based simulation}
+    Disease forecasting models, machine learning, machine vision with convolutional neural networks, epidemiological models, spatial ecology, ODE and PDE numerical simulation and analysis, stochastic models, agent-based simulation}
 \end{tabularx}
 
 \spa
@@ -75,29 +78,38 @@ E\textsc{ducation} & \parbox[t]{\celltwo}{{\bf Ph.D., Mathematics} University of
 
     \vspace{-0.65cm}
     \begin{itemize}
-
-    \item {\bf Basinski AJ}, Fichet-Calvet EJ, Sjodin AR, et al. Bridging the gap: Using reservoir ecology and human sero-surveys to estimate Lassa incidence in West Africa. \emph{PLoS computational biology} 17.3 (2021).
+      
+    \item Varrelman TJ, Remien CH, {\bf Basinski AJ}, et al.
+      Quantifying the effectiveness of betaherpesvirus-vectored
+      transmissible vaccines. \emph{Proceedings of the National Academy of
+        Sciences} 119.4 (2022)
+      
+    \item {\bf Basinski AJ}, Fichet-Calvet EJ, Sjodin AR, et
+      al. Bridging the gap: Using reservoir ecology and human
+      sero-surveys to estimate Lassa incidence in West
+      Africa. \emph{PLoS Computational Biology} 17.3 (2021).
 
       \vspace{0.05in}      
 
-    \item Layman NC, Tuschhoff BM, {\bf Basinski AJ}, et al. Suppressing evolution in genetically engineered systems through repeated supplementation. \emph{Evolutionary Applications} 14.2 (2020).
+    \item Layman NC, Tuschhoff BM, {\bf Basinski AJ}, et
+      al. Suppressing evolution in genetically engineered systems
+      through repeated supplementation. \emph{Evolutionary
+      Applications} 14.2 (2020).
       
       \vspace{0.05in}
       
-    \item Schreiner CL, Nuismer SL, {\bf Basinski AJ}. When to vaccinate a fluctuating wildlife population: is timing everything? \emph{Journal of Applied Ecology} 57.2 (2020). 
+    \item Schreiner CL, Nuismer SL, {\bf Basinski AJ}. When to
+      vaccinate a fluctuating wildlife population: is timing
+      everything? \emph{Journal of Applied Ecology} 57.2 (2020).
 
       \vspace{0.05in}      
       
-    \item Nuismer SL, Remien CH, {\bf Basinski AJ}, et al. Bayesian estimation of Lassa virus epidemiological parameters: implications for spillover prevention using wildlife vaccination. \emph{PLoS Neglected Tropical Diseases} 14.9 (2020).
+    \item Nuismer SL, Remien CH, {\bf Basinski AJ}, et al. Bayesian
+      estimation of Lassa virus epidemiological parameters:
+      implications for spillover prevention using wildlife
+      vaccination. \emph{PLoS Neglected Tropical Diseases} 14.9
+      (2020).
       
-      \vspace{0.05in}
-      
-    \item {\bf Basinski AJ}, Nuismer SL, Remien CH. A little goes a long way: Weak vaccine transmission facilitates oral vaccination campaigns against zoonotic pathogens. \emph{PLoS Neglected Tropical Diseases} 13.3 (2019).
-
-      \vspace{0.05in}
-
-      \item Smithson MW, {\bf Basinski AJ}, Nuismer SL, Bull JJ. Transmissible vaccines whose dissemination rates vary through time, with applications to wildlife. \emph{Vaccine} 37.9 (2019).
-            
     \end{itemize}
   }
 \end{tabularx}
@@ -105,18 +117,44 @@ E\textsc{ducation} & \parbox[t]{\celltwo}{{\bf Ph.D., Mathematics} University of
 \newpage
 
 \begin{tabularx}{\textwidth}{p{\cellone} p{\celltwo}}
-  \parbox[t][0cm]{\cellone}{P\textsc{ublications} \\ \textsc{(Continued)}} &  \parbox[t][0cm]{12cm}{ 
+  \parbox[t][0cm]{\cellone}{P\textsc{ublications}
+    \\ \textsc{(Continued)}} & \parbox[t][0cm]{12cm}{
 
     \vspace{-0.65cm}
     \begin{itemize}
 
-    \item Varrelman TJ, {\bf Basinski AJ}, Remien CH, Nuismer SL. Transmissible vaccines in heterogeneous populations: Implications for vaccine design. \emph{One Health} 7 (2019).
-          
-    \item Nuismer SL, May RH, {\bf Basinski AJ}, Remien CH. Controlling epidemics with transmissible vaccines. \emph{PloS One} 13.5 (2018).
+
+      
+    \item {\bf Basinski AJ}, Nuismer SL, Remien CH. A little goes a
+      long way: Weak vaccine transmission facilitates oral vaccination
+      campaigns against zoonotic pathogens. \emph{PLoS Neglected
+      Tropical Diseases} 13.3 (2019).
+
+      \vspace{0.05in}
+
+      \item Smithson MW, {\bf Basinski AJ}, Nuismer SL, Bull
+        JJ. Transmissible vaccines whose dissemination rates vary
+        through time, with applications to wildlife. \emph{Vaccine}
+        37.9 (2019).
+
+      \vspace{0.05in}
+        
+
+    \item Varrelman TJ, {\bf Basinski AJ}, Remien CH, Nuismer
+      SL. Transmissible vaccines in heterogeneous populations:
+      Implications for vaccine design. \emph{One Health} 7 (2019).
+
+      \vspace{0.05in}
+      
+    \item Nuismer SL, May RH, {\bf Basinski AJ}, Remien
+      CH. Controlling epidemics with transmissible
+      vaccines. \emph{PloS One} 13.5 (2018).
       
       \vspace{0.05in}
       
-    \item {\bf Basinski AJ}, Varrelman TJ, Smithson MW, et al. Evaluating the promise of recombinant transmissible vaccines. \emph{Vaccine} 36.5 (2018).
+    \item {\bf Basinski AJ}, Varrelman TJ, Smithson MW, et
+      al. Evaluating the promise of recombinant transmissible
+      vaccines. \emph{Vaccine} 36.5 (2018).
       
     \end{itemize}
   }
@@ -127,9 +165,18 @@ E\textsc{ducation} & \parbox[t]{\celltwo}{{\bf Ph.D., Mathematics} University of
 \spa
 \spa
 \spa
+\spa
+\spa
+\spa
+\spa
 
 \begin{tabularx}{\textwidth}{p{\cellone} p{\celltwo} p{\cellthree}}
-  \parbox[t][0cm]{\cellone}{C\textsc{onferences}}  & \parbox[t][]{\celltwo}{{\bf MIDAS Meeting}, Washington DC, US} & \parbox[t][]{\cellthree}{April, 2018} \\ 
+  \parbox[t][0cm]{\cellone}{P\textsc{resentations}}  & \parbox[t][]{\celltwo}{{\bf Univ. Idaho Math Colloquium}, Moscow, ID, US} & \parbox[t][]{\cellthree}{Feb., 2021} \\ 
+  & \hspace{.2in} \parbox[t][]{\celltwo}{ \emph{Talk: } Using mathematics and machine learning \\to
+guide the control of human pathogens in
+wildlife} \\
+
+  & \vspace{0.1in} \parbox[t][]{\celltwo}{{\bf MIDAS Meeting}, Washington DC, US} & \vspace{0.1in} \parbox[t][]{\cellthree}{April, 2018} \\ 
   & \hspace{.2in} \parbox[t][]{\celltwo}{ \emph{Talk: } The benefits and challenges of using transmissible \\
   vaccines in zoonotic vaccination campaigns} \\
 
@@ -211,19 +258,19 @@ E\textsc{ducation} & \parbox[t]{\celltwo}{{\bf Ph.D., Mathematics} University of
 \begin{tabularx}{\textwidth}{p{\cellone} p{\celltwo} p{\cellthree}}
   \parbox[t][0cm]{\cellone}{R\textsc{eferences}} & \parbox[t][0cm]{6cm}{
     \vspace{-0.65cm}
+
+
     
-    \begin{itemize}
-      \item \parbox[t]{10cm}{Available upon request.}
-      %% \item \parbox[t]{10cm}{Dr. Christopher Remien (cremien@uidaho.edu) \\ Office phone: (208) 885-5901 \\ Mathematics, University of Idaho}
-    %% \item \parbox[t]{10cm}{Dr. Scott Nuismer (snuismer@uidaho.edu)  \\ Office phone: (208) 596-1949   \\ Biology, University of Idaho}
-    %% \item \parbox[t]{10cm}{Dr. Jim Bull (jbull@uidaho.edu) \\ Office phone: (512)-618-9892 \\ Biology, University of Idaho}
-    %%   %% Update
-    %% \item \parbox[t]{10cm}{Dr. Paul Gessler (paulg@uidaho.edu) \\ Office phone: (208) 310-2942 \\ Natural Resources (GIS), University of Idaho}      
-    %%   %% Update
-    %% \item \parbox[t]{10cm}{Dr. Frederick Adler (adler@math.utah.edu) \\ Office phone (biology): (801) 581-6848 \\ Office phone (math): (801) 585-6202 \\ Biology and Mathematics, University of Utah}
-    \end{itemize}
-  }
+%%     \begin{itemize}
+%%     \item \parbox[t]{10cm}{Dr. Christopher Remien (cremien@uidaho.edu) \\ Office phone: (208) 885-5901 \\ Mathematics, University of Idaho}
+%%     \item \parbox[t]{10cm}{Dr. Scott Nuismer (snuismer@uidaho.edu)  \\ Office phone: (208) 596-1949   \\ Biology, University of Idaho}
+%%     \item \parbox[t]{10cm}{Dr. Jim Bull (jbull@uidaho.edu) \\ Office phone: (512)-618-9892 \\ Biology, University of Idaho}
+%%     \item \parbox[t]{10cm}{Dr. Paul Gessler (paulg@uidaho.edu) \\ Office phone: (208) 310-2942 \\ Natural Resources (GIS), University of Idaho}      
+%% %    \item \parbox[t]{10cm}{Dr. Frederick Adler (adler@math.utah.edu) \\ Office phone (biology): (801) 581-6848 \\ Office phone (math): (801) 585-6202 \\ Biology and Mathematics, University of Utah}
+%%     \end{itemize}
+   }
   
 \end{tabularx}
 
+\center Available upon request
 \end{document}
